see all results screen styles alignments fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/kore-widgets.css
@@ -9984,10 +9984,10 @@ body.demo .finalResults .task-wrp:nth-child(n+3) {
 }
 .custom-matched-results-container {
     display: none;
-    /* position: absolute; */
-    position: relative;
-    width: calc(100% - 70%);
-    left: 70%;
+    position: absolute;
+    width: 250px;
+    left: auto;
+    right: 10px;
     margin-top: -35px;
     padding: 10px;
     text-align: center;
@@ -10290,6 +10290,7 @@ input:checked + .custom-slider:before {
 .custom-faqs-shadow.matched_pages .custom-faqs-bottom-actions{
     padding: 0;
     border: 0 !important;
+    text-align: left;
 }
 .custom-faqs-shadow.matched_pages .faqs-bottom-actions .appearences{
     padding: 5px 0 15px 0;
@@ -10449,13 +10450,13 @@ input:checked + .custom-slider:before {
   .custom_toggle.kr-sg-toggle .slider span.enabled {
     padding-left: 50px;
     position: absolute;
-    top: 2px;
+    top: 0px;
     display: none;
   }
   .custom_toggle.kr-sg-toggle .slider span.disabled {
     padding-left: 50px;
     position: absolute;
-    top: 2px;
+    top: 0px;
   }
   .custom_toggle.kr-sg-toggle .slider::before {
     position: absolute;
